--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Savings Group App</title>
+    <title>Group Savings App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -45,12 +47,19 @@
                     </tr>
                 </thead>
                 <tbody id="savings-table-body"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Total</td>
+                        <td id="total-amount"></td>
+                        <td></td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2023 Savings Group App. All rights reserved.</p>
+        <p>&copy; 2023, Built with love by Emmanuel Ekete.</p>
     </footer>
 
     <script src="script.js"></script>
